refactor: add UserDetailComponent

--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -35,7 +35,11 @@
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let user; columns: displayedColumns"></tr>
+    <tr
+      mat-row
+      *matRowDef="let user; columns: displayedColumns"
+      (click)="userDetail(user.login)"
+    ></tr>
   </table>
 
   <mat-paginator
